--- a/new1.html
+++ b/new1.html
@@ -161,24 +161,26 @@ Industries  </h2>
 <div class="col-lg-6">
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--purple__1dqEc">
-Banking & Insurance</div>
+Banking</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-3 Use Cases </div>
+3 Implementations </div>
 </div>
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--blue__ROe6J">
 Healthcare</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-4 Use Cases</div>
+4 Implementations</div>
 </div>
+
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
-Public Sector</div>
+Public</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-3</div>
+3 Implementations</div>
 </div>
+<br><br>
 <div>
-<div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
+<div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--red__muO5N">
 Logistics</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
