--- a/new1.html
+++ b/new1.html
@@ -209,12 +209,14 @@ ETL</div>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(31, 207, 241);">
 Transformation</h3>
 <p class="small subdued">
-Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.</p>
+Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.and as hardware gets faster, so will the network the network</p>
 
 </div>
 </div>
+
 <div class="col-md-6 mb-2 mt-lg-n10" >
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
+<br><br><br>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
 Tools</h3>
 <p class="small subdued">
@@ -233,6 +235,7 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 </div>
 <div class="col-md-6 mb-2 mt-lg-n8">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
+<br><br>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
 On-Prem</h3>
 <p class="small subdued">
@@ -247,9 +250,17 @@ environment</a>
 </div>
 </div>
 </div>
+
+
+
 </div>
 <div>
 </div>
+
+
+
+
+
 </main>
 
 
