--- a/new1.html
+++ b/new1.html
@@ -58,7 +58,19 @@ website title md
 <link rel="stylesheet" href="https://mariodouradogit.github.io/ceram/7e9c1570e118dc0c.css" crossorigin="" data-n-p="">
 
 
+<style>
+        /* Default styling for <br> element */
+        .desktop-br {
+            display: none;
+        }
 
+        /* Media query for desktop */
+        @media only screen and (min-width: 768px) {
+            .desktop-br {
+                display: inline;
+            }
+        }
+    </style>
 
 
 
@@ -216,7 +228,8 @@ Don’t keep your users waiting. Solana has block times of 400 milliseconds — 
 
 <div class="col-md-6 mb-2 mt-lg-n10" >
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
-<br><br><br>
+
+<span class="desktop-br"><br><br><br></span>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
 Tools</h3>
 <p class="small subdued">
@@ -235,7 +248,9 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 </div>
 <div class="col-md-6 mb-2 mt-lg-n8">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
-<br><br>
+
+<span class="desktop-br"><br><br></span>
+
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
 On-Prem</h3>
 <p class="small subdued">
