--- a/new1.html
+++ b/new1.html
@@ -1,6 +1,17 @@
 <html lang="en"><head>
 
 
+
+<style>
+        /* Define the style for the paragraph */
+        p {
+            font-family: 'Verdana', sans-serif;
+            
+        }
+</style>
+
+
+
 <script>
    function scrollToTargetMD() {
       var targetElement = document.getElementById("scrollTarget");
@@ -17,6 +28,9 @@
 website title md
 </title>
 
+
+	
+	
 
 <meta name="robots" content="index,follow">
 <meta property="og:title" content="Web3 Infrastructure for Everyone | Solana">
@@ -95,24 +109,24 @@ website title md
 
 
 <a href="#scrollTargetIndustries" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-1" aria-expanded="false" type="button">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-1" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
 Industries
 </button>
 </a>
 
 <a href="#scrollTargetIntegration" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle  dropdown-toggle" id="react-aria-3" aria-expanded="false" type="button">
+<button class="nav-link nav-link--primary dropdown-toggle  dropdown-toggle" id="react-aria-3" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
 Data Integration
 </button>
 </a>
 
 <a href="#scrollTargetVisualization" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-4" aria-expanded="false" type="button">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-4" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
 Data Visualization
 </button>
 </a>
 <a href="#scrollTargetAbout" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-5" aria-expanded="false" type="button">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-5" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
 About
 </button>
 </a>
@@ -128,37 +142,21 @@ About
 
 
 <!-- CENTER -->
-
 <main>
 <div class="pb-10 IndexHero_index-hero__J1AyL">
-<div class="container text-center IndexHero_index-hero__container___O5eF">
-<div class="IndexHero_index-hero__ring--small__5BG8i">
-
+	<div class="container text-center IndexHero_index-hero__container___O5eF">
+		<h1 class="h2 mb-4">
+			<p style="font-family: 'Verdana', sans-serif;">Intelligence and Analytics
+			<br class="d-block">
+			Data Solutions</p>
+		</h1>
+		<div class="row">
+			<div class="col-md-7 mx-auto">
+				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization.</p>
+			</div>
+		</div>
+	</div>
 </div>
-<div class="IndexHero_index-hero__ring--large__3NbbP">
-
-</div>
-<h1 class="h2 mb-4">
-Intelligence and Analytics Solutions<br class="d-block">
-Fast for everyone</h1>
-<div class="row">
-<div class="col-md-7 mx-auto">
-<p class="my-6">
-Integration solutions for a better data visualization.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="text-center mb-6 mt-n10 IndexLogos_index-logos__F3FpH">
-<div class="container">
-<h2 class="fw-normal mb-2 text-uppercase IndexLogos_index-logos__heading___qKa2">
-Powering tools and integrations from companies all around the world</h2>
-</div>
-
-</div>
-
-
-
 
 
 
@@ -171,41 +169,52 @@ Powering tools and integrations from companies all around the world</h2>
 </div>
 <div class="container">
 <div class="row pb-10">
+
+
+
 <div class="col-lg-6">
 <h2 class="h4 w-lg-75 mt-0 mt-lg-10 mb-8 mb-lg-0 IndexStats_index-stats__heading__4V50Y">
-Industries  </h2>
+
+<p style="font-family: 'Verdana', sans-serif;">
+Industries</p>  </h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
 Success Stories </div>
 </div>
 <div class="col-lg-6">
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--purple__1dqEc">
-Banking</div>
+<p style="font-family: 'Verdana', sans-serif;">
+Banking </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations </div>
 </div>
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--blue__ROe6J">
-Healthcare</div>
+<p style="font-family: 'Verdana', sans-serif;">
+Healthcare </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
 </div>
 
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
-Public</div>
+<p style="font-family: 'Verdana', sans-serif;">
+Public </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations</div>
 </div>
 <br><br>
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--red__muO5N">
-Logistics</div>
+<p style="font-family: 'Verdana', sans-serif;">
+Logistics </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
 </div>
 
 </div>
+
+
 </div>
 
 
@@ -216,7 +225,7 @@ Logistics</div>
 <div class="col-lg-4">
 <div class="mb-8 mb-lg-0">
 <h2 class="h4 IndexStats_index-stats__heading__4V50Y">
-Data Integration</h2>
+<p style="font-family: 'Verdana', sans-serif;">Data Integration</p></h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
 ETL</div>
 </div>
@@ -226,7 +235,7 @@ ETL</div>
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(31, 207, 241);">
-Transformation</h3>
+<p style="font-family: 'Verdana', sans-serif;">Transformation</h3>
 <p class="small subdued">
 Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.and as hardware gets faster, so will the network the network</p>
 
@@ -238,7 +247,7 @@ Don’t keep your users waiting. Solana has block times of 400 milliseconds — 
 
 <span class="desktop-br"><br><br><br></span>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
-Tools</h3>
+<p style="font-family: 'Verdana', sans-serif;">Tools</h3>
 <p class="small subdued">
 The Solana network is validated by thousands of nodes that operate independently of each other, ensuring your data remains secure and censorship resistant.</p>
 
@@ -246,8 +255,8 @@ The Solana network is validated by thousands of nodes that operate independently
 </div>
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
-<h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
-Data Factory</h3>
+<p style="font-family: 'Verdana', sans-serif;"><h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
+<p style="font-family: 'Verdana', sans-serif;">Data Factory</p></h3>
 <p class="small subdued">
 Get big, quick. Solana is made to handle thousands of transactions per second, and fees for both developers and users remain less than $0.0025.</p>
 
@@ -259,7 +268,7 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 <span class="desktop-br"><br><br></span>
 
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
-On-Prem</h3>
+<p style="font-family: 'Verdana', sans-serif;">On-Prem</p></h3>
 <p class="small subdued">
 Solana’s proof of stake network and other innovations minimize its impact on the <a class="" href="https://solana.com/environment">
 environment</a>
@@ -283,9 +292,10 @@ environment</a>
 <div class="col-lg-4">
 <div class="mb-8 mb-lg-0">
 <h2 class="h4 IndexStats_index-stats__heading__4V50Y">
-Data Visualization</h2>
+<p style="font-family: 'Verdana', sans-serif;">Data Visualization</p></h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
-Dashboards & Reporting </div>
+DASHBOARDS & REPORTING
+</div>
 </div>
 </div>
 <div class="col-lg-8">
@@ -293,7 +303,7 @@ Dashboards & Reporting </div>
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(31, 207, 241);">
-Transformation</h3>
+<p style="font-family: 'Verdana', sans-serif;">Transformation</h3>
 <p class="small subdued">
 Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.and as hardware gets faster, so will the network the network</p>
 
@@ -305,7 +315,7 @@ Don’t keep your users waiting. Solana has block times of 400 milliseconds — 
 
 <span class="desktop-br"><br><br><br></span>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
-Tools</h3>
+<p style="font-family: 'Verdana', sans-serif;">Tools</h3>
 <p class="small subdued">
 The Solana network is validated by thousands of nodes that operate independently of each other, ensuring your data remains secure and censorship resistant.</p>
 
@@ -313,8 +323,8 @@ The Solana network is validated by thousands of nodes that operate independently
 </div>
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
-<h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
-Data Factory</h3>
+<p style="font-family: 'Verdana', sans-serif;"><h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
+<p style="font-family: 'Verdana', sans-serif;">Data Factory</p></h3>
 <p class="small subdued">
 Get big, quick. Solana is made to handle thousands of transactions per second, and fees for both developers and users remain less than $0.0025.</p>
 
@@ -326,7 +336,7 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 <span class="desktop-br"><br><br></span>
 
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
-On-Prem</h3>
+<p style="font-family: 'Verdana', sans-serif;">On-Prem</p></h3>
 <p class="small subdued">
 Solana’s proof of stake network and other innovations minimize its impact on the <a class="" href="https://solana.com/environment">
 environment</a>
