--- a/new1.html
+++ b/new1.html
@@ -109,24 +109,24 @@ website title md
 
 
 <a href="#scrollTargetIndustries" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-1" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-1" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 15px;">
 Industries
 </button>
 </a>
 
 <a href="#scrollTargetIntegration" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle  dropdown-toggle" id="react-aria-3" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
+<button class="nav-link nav-link--primary dropdown-toggle  dropdown-toggle" id="react-aria-3" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 15px;">
 Data Integration
 </button>
 </a>
 
 <a href="#scrollTargetVisualization" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-4" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-4" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 15px;">
 Data Visualization
 </button>
 </a>
 <a href="#scrollTargetAbout" onclick="scrollTarget()">
-<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-5" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 16px;">
+<button class="nav-link nav-link--primary dropdown-toggle false dropdown-toggle" id="react-aria-5" aria-expanded="false" type="button" style="font-family: 'Verdana', sans-serif; font-size: 15px;">
 About
 </button>
 </a>
@@ -174,8 +174,8 @@ About
 
 <div class="col-lg-6">
 <h2 class="h4 w-lg-75 mt-0 mt-lg-10 mb-8 mb-lg-0 IndexStats_index-stats__heading__4V50Y">
-
-<p style="font-family: 'Verdana', sans-serif;">
+ 
+<p style="font-family: 'Verdana', sans-serif; font-size: 35px;">
 Industries</p>  </h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
 Success Stories </div>
@@ -183,14 +183,14 @@ Success Stories </div>
 <div class="col-lg-6">
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--purple__1dqEc">
-<p style="font-family: 'Verdana', sans-serif;">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
 Banking </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations </div>
 </div>
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--blue__ROe6J">
-<p style="font-family: 'Verdana', sans-serif;">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
 Healthcare </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
@@ -198,7 +198,7 @@ Healthcare </p></div>
 
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
-<p style="font-family: 'Verdana', sans-serif;">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
 Public </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations</div>
@@ -206,7 +206,7 @@ Public </p></div>
 <br><br>
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--red__muO5N">
-<p style="font-family: 'Verdana', sans-serif;">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
 Logistics </p></div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
@@ -225,7 +225,7 @@ Logistics </p></div>
 <div class="col-lg-4">
 <div class="mb-8 mb-lg-0">
 <h2 class="h4 IndexStats_index-stats__heading__4V50Y">
-<p style="font-family: 'Verdana', sans-serif;">Data Integration</p></h2>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 35px;">Data Integration</p></h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
 ETL</div>
 </div>
@@ -292,7 +292,7 @@ environment</a>
 <div class="col-lg-4">
 <div class="mb-8 mb-lg-0">
 <h2 class="h4 IndexStats_index-stats__heading__4V50Y">
-<p style="font-family: 'Verdana', sans-serif;">Data Visualization</p></h2>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 35px;">Data Visualization</p></h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
 DASHBOARDS & REPORTING
 </div>
