--- a/new1.html
+++ b/new1.html
@@ -130,7 +130,7 @@ About
 		<div class="row">
 			<div class="col-md-7 mx-auto">
 				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization.</p>
-				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization.</p>
+				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization 2</p>
 				
 			</div>
 		</div>
@@ -421,20 +421,9 @@ image?url="https://mariodouradogit.github.io/ceram/datasol_logo.svg" 2x"="" src=
 <div class="row my-6 my-md-0">
 <div class="col pe-lg-8">
 <div class="h6 smaller text-uppercase text-nowrap">
-DATASOL</div>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 13px;">
+DATASOL</p></div>
 <ul class="list-unstyled m-0">
-<li>
-<a href="https://solana.org/grants" rel="noopener noreferrer" target="_blank">
-Grants</a>
-</li>
-<li>
-<a href="https://break.solana.com/" rel="noopener noreferrer" target="_blank">
-Break Solana</a>
-</li>
-<li>
-<a class="" href="https://solana.com/branding">
-Media Kit</a>
-</li>
 <li>
 <a href="https://jobs.solana.com/" rel="noopener noreferrer" target="_blank">
 Careers</a>
@@ -453,7 +442,10 @@ Privacy Policy</a>
 <div class="row flex-md-nowrap h-100 flex-column flex-md-row">
 <div class="col pe-lg-8">
 <div class="h6 smaller text-uppercase text-nowrap">
-Get Connected</div>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 13px;">
+Get Connected
+</p>
+</div>
 <ul class="list-unstyled m-0">
 <li>
 <a class="" href="https://solana.com/ecosystem">
