--- a/new1.html
+++ b/new1.html
@@ -124,15 +124,13 @@ About
 <div class="pb-10 IndexHero_index-hero__J1AyL">
 	<div class="container text-center IndexHero_index-hero__container___O5eF">
 		<h1 class="h2 mb-4">
-			<p style="font-family: 'Verdana', sans-serif;">Intelligence <br class="d-block"> Analytics
-			<br class="d-block">
-			Data Solutions</p>
+			<p style="font-family: 'Verdana', sans-serif;font-size: 70px;">
+			<span class="desktop-br"><br><br></span>Data Solutions</p>
+			<p style="font-family: 'Verdana', sans-serif;font-size: 30px;">Integration solutions for a better data visualization.</p>
 		</h1>
 		<div class="row">
 			<div class="col-md-7 mx-auto">
-				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization.</p>
-				<p class="my-6" style="font-family: 'Verdana', sans-serif;">Integration solutions for a better data visualization 2</p>
-				
+				<p class="my-6" style="font-family: 'Verdana', sans-serif; font-size: 20px;">Fixed-price projects only<br> Your project our risk!</p>
 			</div>
 		</div>
 	</div>
@@ -215,7 +213,14 @@ ETL</div>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(31, 207, 241);">
 <p style="font-family: 'Verdana', sans-serif;">Transformation</h3>
 <p class="small subdued">
-Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.and as hardware gets faster, so will the network the network</p>
+Data cleansing
+<br>Data deduplication.
+<br>Data format revision.
+<br>Advanced data transformation.
+<br>Derivation, Splitting, Joining
+and Summarization.
+
+</p>
 
 </div>
 </div>
@@ -227,7 +232,11 @@ Don’t keep your users waiting. Solana has block times of 400 milliseconds — 
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
 <p style="font-family: 'Verdana', sans-serif;">Tools</h3>
 <p class="small subdued">
-The Solana network is validated by thousands of nodes that operate independently of each other, ensuring your data remains secure and censorship resistant.</p>
+Data Transformation Tools.
+<br> Data Integration tools.
+<br> SQL.
+<br> ETL Tools.
+</p>
 
 </div>
 </div>
@@ -236,7 +245,12 @@ The Solana network is validated by thousands of nodes that operate independently
 <p style="font-family: 'Verdana', sans-serif;"><h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
 <p style="font-family: 'Verdana', sans-serif;">Data Factory</p></h3>
 <p class="small subdued">
-Get big, quick. Solana is made to handle thousands of transactions per second, and fees for both developers and users remain less than $0.0025.</p>
+Fully managed Azure service.
+<br>Code-free and low-code transformations.
+<br>Combination of GUI and scripting-based interfaces.
+<br>Easy migration from SSIS.
+<br>Consumption-based pricing.
+</p>
 
 </div>
 </div>
@@ -246,11 +260,17 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 <span class="desktop-br"><br><br></span>
 
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
-<p style="font-family: 'Verdana', sans-serif;">On-Prem</p></h3>
+<p style="font-family: 'Verdana', sans-serif;">SSIS</p></h3>
 <p class="small subdued">
-Solana’s proof of stake network and other innovations minimize its impact on the <a class="" href="https://solana.com/environment">
-environment</a>
-. Each Solana transaction uses about the same energy as a few Google searches.</p>
+On-Prem Solutions.
+<br> Multiple connectors.
+<br>Parallel Execution.
+<br>Control Flow and Workflow Logic.
+<br>Rich Transformation Capabilities.
+<br>Scripting and Customization.
+<br>Security and Access Control.
+
+</p>
 
 </div>
 </div>
@@ -272,7 +292,7 @@ environment</a>
 <h2 class="h4 IndexStats_index-stats__heading__4V50Y">
 <p style="font-family: 'Verdana', sans-serif;  font-size: 35px;">Data Visualization</p></h2>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__live__8xU7q IndexStats_index-stats__ff-mono__FXeBH">
-DASHBOARDS & REPORTING
+DASHBOARDS & REPORTS
 </div>
 </div>
 </div>
@@ -281,10 +301,11 @@ DASHBOARDS & REPORTING
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(31, 207, 241);">
-<p style="font-family: 'Verdana', sans-serif;">Transformation</h3>
+<p style="font-family: 'Verdana', sans-serif;">Benefits</h3>
 <p class="small subdued">
-Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware gets faster, so will the network.and as hardware gets faster, so will the network the network</p>
-
+Immediate and intuitive access to relevant information for decision-makers.
+<br>Higher result in presenting results, objectives and trends.
+<br>A better understanding of operational performance and business activities
 </div>
 </div>
 
@@ -293,19 +314,25 @@ Don’t keep your users waiting. Solana has block times of 400 milliseconds — 
 
 <span class="desktop-br"><br><br><br></span>
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(255, 213, 18);">
-<p style="font-family: 'Verdana', sans-serif;">Tools</h3>
+<p style="font-family: 'Verdana', sans-serif;">PowerBI</h3>
 <p class="small subdued">
-The Solana network is validated by thousands of nodes that operate independently of each other, ensuring your data remains secure and censorship resistant.</p>
+Ease of use.
+<br>Strong permissions that reduce the risk of network intrusion.
+<br>Row level security (RLS) allows certain people to see certain data points, for example, a sales manager can only see sales related to their team.
+
+</p>
 
 </div>
 </div>
 <div class="col-md-6 mb-2 undefined">
 <div class="p-6 IndexStats_index-stats__card__KX4VC">
 <p style="font-family: 'Verdana', sans-serif;"><h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(153, 69, 255);">
-<p style="font-family: 'Verdana', sans-serif;">Data Factory</p></h3>
+<p style="font-family: 'Verdana', sans-serif;">SSRS</p></h3>
 <p class="small subdued">
-Get big, quick. Solana is made to handle thousands of transactions per second, and fees for both developers and users remain less than $0.0025.</p>
+Traditional reporting with pixel-perfect exports when a dashboard doesn't meet the required criteria.
+<br>SS Reporting Services supports a wide range of report types, including tabular reports, matrix reports, charts, graphs, and more. 
 
+</p>
 </div>
 </div>
 <div class="col-md-6 mb-2 mt-lg-n8">
@@ -314,11 +341,17 @@ Get big, quick. Solana is made to handle thousands of transactions per second, a
 <span class="desktop-br"><br><br></span>
 
 <h3 class="h5 IndexStats_index-stats__card__title__km6lq" style="border-color: rgb(25, 251, 155);">
-<p style="font-family: 'Verdana', sans-serif;">On-Prem</p></h3>
+<p style="font-family: 'Verdana', sans-serif;">Analytics</p></h3>
 <p class="small subdued">
-Solana’s proof of stake network and other innovations minimize its impact on the <a class="" href="https://solana.com/environment">
-environment</a>
-. Each Solana transaction uses about the same energy as a few Google searches.</p>
+Explore statistical summary.
+<br>Identify outliers with Power BI visuals.
+<br>Group and bin data for analysis.
+<br>Apply clustering techniques.
+<br>Conduct time series analysis.
+<br>Analyze feature.
+<br>Advanced analytics custom visuals
+
+</p>
 
 </div>
 </div>
