--- a/new1.html
+++ b/new1.html
@@ -151,8 +151,8 @@ About
 			<!-- mobile -->
 			<span class="mobile-br">
 				<p style="font-family: 'Verdana', sans-serif;font-size: 40px;">
-				<br><br>Data Solutions</p>
-				<p style="font-family: 'Verdana', sans-serif;font-size: 25px;">Integration solutions for a better data visualization.</p>
+				Data Solutions</p>
+				<p style="font-family: 'Verdana', sans-serif;font-size: 20px;">Integration solutions for a better data visualization.</p>
 			</span>
 			
 					
@@ -160,7 +160,7 @@ About
 		</h1>
 		<div class="row">
 			<div class="col-md-7 mx-auto">
-				<p class="my-6" style="font-family: 'Verdana', sans-serif; font-size: 20px;">Fixed-price projects only<br> Your project our risk!</p>
+				<p class="my-6" style="font-family: 'Verdana', sans-serif; font-size: 15px;">Fixed-price projects only<br> Your project our risk!</p>
 			</div>
 		</div>
 	</div>
