--- a/new1.html
+++ b/new1.html
@@ -189,31 +189,74 @@ Industries</p>  </h2>
 <div class="col-lg-6">
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--purple__1dqEc">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
-Banking </p></div>
+
+<!-- desktop -->
+<span class="desktop-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Banking </p>
+</span>
+
+<!-- mobile -->
+<span class="mobile-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Banking </p>
+</span>
+
+
+</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations </div>
 </div>
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--blue__ROe6J">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
-Healthcare </p></div>
+
+<!-- desktop -->
+<span class="desktop-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Healthcare </p>
+</span>
+
+<!-- mobile -->
+<span class="mobile-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Healthcare </p>
+</span>
+
+</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
 </div>
 
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
-Public </p></div>
+
+
+
+<!-- desktop -->
+<span class="desktop-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Public </p>
+</span>
+
+<!-- mobile -->
+<span class="mobile-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Public </p>
+</span>
+
+</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 3 Implementations</div>
 </div>
 <br><br>
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--red__muO5N">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;">
-Logistics </p></div>
+
+<!-- desktop -->
+<span class="desktop-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Logistics </p>
+</span>
+
+<!-- mobile -->
+<span class="mobile-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Logistics </p>
+</span>
+
+</div>
 <div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
 4 Implementations</div>
 </div>
