--- a/new1.html
+++ b/new1.html
@@ -186,80 +186,100 @@ About
 <p style="font-family: 'Verdana', sans-serif; font-size: 35px;">
 Industries</p>  </h2>
 </div>
+
+
 <div class="col-lg-6">
 <div class="mb-8">
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--purple__1dqEc">
-
+<br>
 <!-- desktop -->
 <span class="desktop-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Banking </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;">Banking</p>
 </span>
 
 <!-- mobile -->
 <span class="mobile-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Banking </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 40px;">Banking</p>
 </span>
 
 
 </div>
-<div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-3 Implementations </div>
+
 </div>
-<div class="mb-8">
+
+
+<div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--blue__ROe6J">
 
 <!-- desktop -->
 <span class="desktop-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Healthcare </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;">Healthcare</p>
 </span>
 
 <!-- mobile -->
 <span class="mobile-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Healthcare </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 40px;">Healthcare</p>
 </span>
 
 </div>
-<div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-4 Implementations</div>
 </div>
+
+
 
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--green__muO5N">
 
-
-
 <!-- desktop -->
 <span class="desktop-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Public </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;">Government</p>
 </span>
 
 <!-- mobile -->
 <span class="mobile-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Public </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 40px;">Government</p>
 </span>
 
 </div>
-<div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-3 Implementations</div>
 </div>
-<br><br>
+
+
 <div>
 <div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--red__muO5N">
 
 <!-- desktop -->
 <span class="desktop-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 70px;"> Logistics </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;">Insurance</p>
 </span>
 
 <!-- mobile -->
 <span class="mobile-br">
-<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;"> Logistics </p>
+<p style="font-family: 'Verdana', sans-serif;  font-size: 40px;">Insurance</p>
 </span>
 
 </div>
-<div class="smaller text-uppercase subdued IndexStats_index-stats__ff-mono__FXeBH">
-4 Implementations</div>
+
 </div>
+
+
+<div>
+<div class="m-0 IndexStats_index-stats__color__F8ess IndexStats_index-stats__color--yellow__muO5N">
+
+<!-- desktop -->
+<span class="desktop-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 50px;">Tourism</p>
+</span>
+
+<!-- mobile -->
+<span class="mobile-br">
+<p style="font-family: 'Verdana', sans-serif;  font-size: 40px;">Tourism</p>
+</span>
+
+</div>
+</div>
+
+
+
+
 
 </div>
 
